objects/Product_Shipment__c.object
<CustomObject>
    <description>Allow tracking of product shipments which are relatd to opportunities.</description>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <defaultValue>TODAY()+7</defaultValue>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The field is used to relate to the opportunity that the shipment belongs to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Shipments</relationshipLabel>
        <relationshipName>Product_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Place</fullName>
                </value>
                <value>
                    <fullName>Item(s) Picked</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Ready For Shipping</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Item Delayed</fullName>
                </value>
                <value>
                    <fullName>Item Lost</fullName>
                </value>
                <value>
                    <fullName>Item Damaged</fullName>
                </value>
                <value>
                    <fullName>Out Of Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS# {00000000}</displayFormat>
        <label>Product Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>